--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -3,7 +3,7 @@ shortTitle: M. Andrew Eick links
 siteUrl: https://mae.io
 description: ""
 lang: en
-logo: logo.png
+logo: pixel_640.png
 favicon: favicon.png
 rounded: "16"
 colors:
